Add evaluation script and update environment dependencies
- Introduced `evaluate_loan_predictor.py` for model evaluation, including metrics calculation and result saving.
- Added new dependencies: `click` and `pandas` to `environment.yml`.
- Created new CSV files for classification report, confusion matrix, cross-validation results, and test scores.
- Added PNG files for Precision-Recall and ROC curves to visualize model performance.

--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,8 @@ dependencies:
   - matplotlib>=3.2.2
   - scikit-learn=1.7.2
   - requests>=2.24.0
+  - click>=8.1.7
+  - pandas=2.1.2
   - graphviz=14.0.4
   - python-graphviz=0.21
   # - eli5
