--- a/environment.yml
+++ b/environment.yml
@@ -29,6 +29,7 @@ dependencies:
   - imbalanced-learn=0.14.0
   - conda
   - mamba
+  - tabulate=0.9.0
   # - pip:
   #   - mglearn
   #   - spacymoji
