Update Dockerfile and environment configuration for Quarto and Jupyter integration
- Changed base image to a specific version of Jupyter minimal notebook.
- Added installation of LaTeX packages for document rendering.
- Updated environment.yml to include 'quarto' and 'quarto-cli' dependencies.
- Modified docker-compose.yml to install 'python-json-logger' and set Jupyter Lab as the default interface.
- Adjusted Makefile paths for report generation and cleaning.
- Updated loan-analysis report metadata and fixed links in the HTML output.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,6 @@ services:
         limits:
           memory: 5G
     platform: linux/amd64
-    command: start-notebook.sh --NotebookApp.token='' --NotebookApp.password=''
+    command: bash -c "pip install python-json-logger>=2.0.0 && start-notebook.sh --NotebookApp.token='' --NotebookApp.password=''"
+    environment:
+      - JUPYTER_ENABLE_LAB=yes
