--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,7 @@ dependencies:
   - python-graphviz=0.21
   # - eli5
   # - shap>=0.45 
+  - quarto
   - jinja2=3.1.6
   - lightgbm=4.6.0
   - spacy=3.8.11
@@ -31,7 +32,10 @@ dependencies:
   - mamba
   - tabulate=0.9.0
   - vl-convert-python
-  # - pip:
-  #   - mglearn
-  #   - spacymoji
-  #   - altair_ally>=0.1.1  
+  - pip:
+    - python-json-logger
+    - quarto-cli
+  # - vl-convert-python
+    #   - mglearn
+    #   - spacymoji
+    #   - altair_ally>=0.1.1  
